# vivid

./: README.md  Vivid.hs  vivid.cabal
Vivid/: Actions.hs  ByteBeat.hs  Envelopes.hs  NoPlugins.hs  OSC.hs  Randomness.hs  SCServer.hs  SynthDef.hs  UGens.hs
Vivid/Actions/: Class.hs  IO.hs  NRT.hs  Scheduled.hs
Vivid/OSC/: Bundles.hs  Util.hs
Vivid/SCServer/: Connection.hs  State.hs  Types.hs
Vivid/SynthDef/: CrazyTypes.hs  FromUA.hs  Literally.hs  ToSig.hs  Types.hs  TypesafeArgs.hs
Vivid/UGens/: Algebraic.hs  Analysis.hs  Args.hs  Buffer.hs  Conversion.hs  Convolution.hs  Delays.hs  Demand.hs  Dynamics.hs  Envelopes.hs  Examples.hs  FFT.hs  Filters.hs  InOut.hs  Info.hs  Maths.hs  Multichannel.hs  Random.hs  Reverbs.hs  SynthControl.hs  Triggers.hs  Undocumented.hs  UserInteraction.hs
Vivid/UGens/Filters/: BEQSuite.hs  Linear.hs  Nonlinear.hs  Pitch.hs
Vivid/UGens/Generators/: Chaotic.hs  Deterministic.hs  Granular.hs  SingleValue.hs  Stochastic.hs
